fix: product detail accordion text spacing and see all for product sliders

--- a/packages/beauty-portal-theme/src/components/ProductDetail/styles.scss
+++ b/packages/beauty-portal-theme/src/components/ProductDetail/styles.scss
@@ -7,7 +7,7 @@
     text-align: center;
 
     img {
-      margin:auto
+      margin: auto;
     }
   }
 
@@ -45,6 +45,8 @@
       transition: max-height 0.3s;
     }
     &_contentExpand {
+      cursor: auto;
+      padding: 0.5rem;
       font-weight: normal;
       max-height: 100vh;
       transition: max-height 0.3s;
